@@ -1,3 +1,13 @@
+2007-02-11  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixcore/workflow/ExtendedContext.java: 
+	* src/de/schlund/pfixcore/scriptedflow/vm/ScriptVM.java: 
+	* src/de/schlund/pfixcore/workflow/Context.java: 
+	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
+	* src/de/schlund/pfixxml/ContextXMLServlet.java: 
+	Moved handleRequest() method out of Context interface into new
+	ExtendedContext interface.
+
 2007-02-09  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java (precedingFlowNeedsData): 
